<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_degrade"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.02"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvEsqueciSenhaInstrucao1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_weight="0.30"
                android:text="@string/msgEsqueciSenha1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />


        </LinearLayout>

        <Button
            android:id="@+id/btnAux"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.02"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tvEsqueciSenhaInstrucao2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:text="@string/msgEsqueciSenha2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="347dp"
            android:layout_height="45dp"
            android:layout_below="@+id/tvEsqueciSenhaInstrucao2"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/box_transparent_com_borda"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEsqueciSenhaEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linearLayout"
                android:layout_marginLeft="10dp"
                android:text="@string/email"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/etEsquciSenhaEmail"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.04"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/dicaEmail"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:textColor="@color/white"
                android:textColorHint="@color/blueGray" />

        </LinearLayout>

        <Button
            android:id="@+id/btnEsqueciSenhaEnviar"
            android:layout_width="347dp"
            android:layout_height="60dp"
            android:layout_below="@+id/linearLayout3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@color/green"
            android:text="@string/enviar"
            android:textColor="@color/white" />

    </RelativeLayout>

</LinearLayout>