<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_degrade"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.02"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvCadastroEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_weight="0.30"
                android:text="@string/registrarEmail"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="347dp"
                android:layout_height="45dp"
                android:layout_below="@+id/linearLayout"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/box_transparent_com_borda"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/linearLayout"
                    android:layout_marginLeft="10dp"
                    android:text="@string/nome"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/etCadastroNome"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.04"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="@string/dicaNome"
                    android:inputType="textCapWords|textMultiLine"
                    android:maxLength="100"
                    android:textColor="@color/white"
                    android:textColorHint="@color/blueGray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="347dp"
                android:layout_height="45dp"
                android:layout_below="@+id/linearLayout"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/box_transparent_com_borda"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCadastroCampoEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/linearLayout"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:text="@string/email"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/etCadastroEmail"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.04"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="@string/dicaEmail"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:textColor="@color/white"
                    android:textColorHint="@color/blueGray"
                    android:textIsSelectable="false" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/icon_avatar" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="347dp"
                android:layout_height="45dp"
                android:layout_below="@+id/linearLayout"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/box_transparent_com_borda"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCadastroCampoSenha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/linearLayout"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:text="@string/senha"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/etCadastroSenha"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.04"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="@string/dicaSenha"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:textColor="@color/white"
                    android:textColorHint="@color/blueGray"
                    android:typeface="normal" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/icon_lock" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnCadastroConcluir"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.02"
            android:background="@color/yellow"
            android:text="@string/concluir" />

    </RelativeLayout>

</LinearLayout>